samples/_failures_safe/1761322205_f32609_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a171adf2.c: In function ‘main’:
./samples/SAFE/__tmp_a171adf2.c:132:5: error: expected declaration or statement at end of input
  132 |     printf("\nMatrix B:\n");
      |     ^~~~~~
